--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,6 +32,7 @@ html {
     @apply cursor-pointer;
   }
   button {
-    @apply shadow-xl shadow-gray-400 rounded-xl uppercase bg-gradient-to-r from-[#5651e5] to-[#709dff] text-white;
+    @apply shadow-md shadow-gray-200 rounded-xl uppercase  text-white;
+    /* @apply shadow-md shadow-gray-400 rounded-xl uppercase bg-gradient-to-r from-[#5651e5] to-[#709dff] text-white; */
   }
 }
