--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@ html {
 
 @layer base {
   body {
-    @apply bg-[#ecf0f3] text-[#1f2937] tracking-wide;
+    @apply bg-[#ecf0f3] text-[#1f2937] tracking-wide dark:bg-[#121212];
   }
 
   h1,
