--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,7 @@ html {
 
 @layer base {
   body {
-    @apply bg-[#ecf0f3] text-[#1f2937] tracking-wide dark:bg-[#121212];
+    @apply bg-[#ebebeb] text-[#1f2937] tracking-wide dark:bg-[#121212];
   }
 
   h1,
